# synthoseis

./: .gitignore  Makefile  main.py  pyproject.toml  run_synthosei2.py  run_synthoseis.py  synthoseis-quick-start.ipynb
config/: flat_clean_config_range.json  flat_clean_config_updated.json  structured_realistic_config_range.json  structured_realistic_config_updated.json
config/other/: example copy 2.json  example copy 3.json  example copy.json  example.json  examplecopy5.json  flat_clean_config.yaml  structured_realistic_config.yaml  structured_realistic_config_range copy.json
config/realistic not smooth/: example copy 4.json  synthoseis-quick-start-not-smooth.ipynb
config/smooth/: example.json
datagenerator/: Closures.py  Horizons.py  Seismic copy.py  Seismic.py
notebooks/: synthoseis-not-smooth.ipynb
notebooks/other/: synthoseis-quick-start copy 2.ipynb  synthoseis-quick-start copy 3.ipynb  synthoseis-quick-start copy.ipynb  synthoseis-quick-start.ipynb
