[project]
name = "synthoseis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bruges>=0.5.4",
    "matplotlib",
    "noise>=1.2.2",
    "numpy<2",
    "plotly",
    "pyyaml>=6.0.2",
    "ruff>=0.10.0",
    "scikit-image",
    "scipy",
    "segyio>=1.9.13",
    "setuptools>=76.0.0",
    "tables>=3.9.2",
    "tqdm",
]
